[package]
name = "drgreencrond"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitflags = "2.11"
nix = { version = "0.31", features = ["fs", "poll", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
ureq = { version = "3.3", features = ["json"] }